--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Conversor de dólar a peso argentino en tiempo real"
     />
     <title>Dollar calculator</title>
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
